# enterprise-ai-builder

./: .gitignore  README.md  project.yaml  pyproject.toml
.github/workflows/: python.yml
actions/: base.py  message.py  registry.py
builder/: project.py
cli/: README.md  eab.py  main.py
docs/: ARCHITECTURE.md  ROADMAP.md
kernel/: README.md  plugin_loader.py
orchestrator/: README.md
plugins/creator-os/: plugin.yaml
registry/: README.md
runtime/: context.py  engine.py
tests/: README.md  test_project.py
workflows/: example.yaml  main.yaml
