[project]
name = "enterprise-ai-builder"
version = "0.1.0"
description = "Enterprise AI Builder Framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Enterprise AI Builder Team" }
]

dependencies = [
    "typer>=0.16.0",
    "rich>=14.0.0",
    "pydantic>=2.11.0",
    "pyyaml>=6.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0",
    "ruff>=0.12.0",
]

[project.scripts]
eab = "cli.eab:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = [
    "cli/**",
    "kernel/**",
    "registry/**",
    "runtime/**",
    "validator/**",
    "sdk/**",
    "plugins/**",
    "workflows/**",
    "README.md",
    "LICENSE",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
